@@ -1,3 +1,8 @@
+2006-12-19  Sebastien Bacher <seb128@ubuntu.com>
+
+	* POTFILES.in: Don't list libgswitchit files, they are not shipped
+	  with the tarball, fixes build from the tarball
+
 2006-12-19  Raivis Dejus <orvils@gmail.com>
 
         * lv.po: Updated Latvian Translation.
